Перше завантаження проекту

--- a/index_contacts.html
+++ b/index_contacts.html
@@ -13,23 +13,23 @@
                     <div class="search-div">
                         <input type="text" class="search">
                     </div>
-                    <a href="#" id="open-menu" class="burger"><img src="/images/burger.png" alt="burger"></a>
+                    <a href="#" id="open-menu" class="burger"><img src="images/burger.png" alt="burger"></a>
                         <div id="menu-container" class="menu-container">
                             <div class="menu-content">
                                 <div class="menu-top">
                                     <div class="upper-menu">
-                                        <a href="#" id="close-menu" class="close-menu-btn"><img src="/images/close-btn.png" alt="close"></a>
-                                        <a href="./index.html" class="nav-link"><img src="/images/KILARA.small.png" alt="logo-small"></a>
+                                        <a href="#" id="close-menu" class="close-menu-btn"><img src="images/close-btn.png" alt="close"></a>
+                                        <a href="./index.html" class="nav-link"><img src="images/KILARA.small.png" alt="logo-small"></a>
                                     </div>
 
                                     <div class="search-small-div"><input type="text" class="search-small"></div>
                                     <ul>
                                             <div class="ctg-content">
                                                 <ul>
-                                                    <li class="menu-block"><a href="#" id="open-wmn">Жінкам <img src="/images/Arrow-menu.png" alt="arrow-menu"></a></li>
+                                                    <li class="menu-block"><a href="#" id="open-wmn">Жінкам <img src="images/Arrow-menu.png" alt="arrow-menu"></a></li>
                                                         <div class="wmn-container" id="wmn-container">
                                                             <div class="wmn-content">
-                                                                <div class="menu-block-back"><a href="#" id="close-wmn"><img src="/images/Arrow-back.png" alt="arrow-back"> Жінкам</a></div>
+                                                                <div class="menu-block-back"><a href="#" id="close-wmn"><img src="images/Arrow-back.png" alt="arrow-back"> Жінкам</a></div>
                                                                 <ul>
                                                                     <li class="menu-block-main"><a href="#">Одяг</a></li>
                                                                     <li class="menu-block"><a href="#">Футболки</a></li>
@@ -49,10 +49,10 @@
                                                                 </ul>
                                                             </div>
                                                         </div>
-                                                    <li class="menu-block"><a href="#" id="open-men">Чоловікам <img src="/images/Arrow-menu.png" alt="arrow-menu"></a></li>
+                                                    <li class="menu-block"><a href="#" id="open-men">Чоловікам <img src="images/Arrow-menu.png" alt="arrow-menu"></a></li>
                                                         <div class="men-container" id="men-container">
                                                             <div class="men-content">
-                                                                <div class="menu-block-back"><a href="#" id="close-men"><img src="/images/Arrow-back.png" alt="arrow-back"> Чоловікам</a></div>
+                                                                <div class="menu-block-back"><a href="#" id="close-men"><img src="images/Arrow-back.png" alt="arrow-back"> Чоловікам</a></div>
                                                                 <ul>
                                                                     <li class="menu-block-main"><a href="#">Одяг</a></li>
                                                                     <li class="menu-block"><a href="#">Футболки</a></li>
@@ -73,10 +73,10 @@
                                                                 </ul>
                                                             </div>
                                                         </div>
-                                                    <li class="menu-block"><a href="#" id="open-kid">Дітям <img src="/images/Arrow-menu.png" alt="arrow-menu"></a></li>
+                                                    <li class="menu-block"><a href="#" id="open-kid">Дітям <img src="images/Arrow-menu.png" alt="arrow-menu"></a></li>
                                                         <div class="kid-container" id="kid-container">
                                                             <div class="kid-content">
-                                                                <div class="menu-block-back"><a href="#" id="close-kid"><img src="/images/Arrow-back.png" alt="arrow-back"> Дітям</a></div>
+                                                                <div class="menu-block-back"><a href="#" id="close-kid"><img src="images/Arrow-back.png" alt="arrow-back"> Дітям</a></div>
                                                                 <ul>
                                                                     <li class="menu-block-main"><a href="#">Одяг</a></li>
                                                                     <li class="menu-block"><a href="#">Футболки</a></li>
@@ -97,10 +97,10 @@
                                                                 </ul>
                                                             </div>
                                                         </div>
-                                                    <li class="menu-block"><a href="#" id="open-acs">Аксесуари <img src="/images/Arrow-menu.png" alt="arrow-menu"></a></li>
+                                                    <li class="menu-block"><a href="#" id="open-acs">Аксесуари <img src="images/Arrow-menu.png" alt="arrow-menu"></a></li>
                                                         <div class="acs-container" id="acs-container">
                                                             <div class="acs-content">
-                                                                <div class="menu-block-back"><a href="#" id="close-acs"><img src="/images/Arrow-back.png" alt="arrow-back"> Аксесуари</a></div>
+                                                                <div class="menu-block-back"><a href="#" id="close-acs"><img src="images/Arrow-back.png" alt="arrow-back"> Аксесуари</a></div>
                                                                 <ul>
                                                                     <li class="menu-block-main"><a href="#">Сумки</a></li>
                                                                     <li class="menu-block"><a href="#">Шопери</a></li>
@@ -131,30 +131,30 @@
                             </div>
                         </div>            
                            
-                    <a href="./index.html" class="normal logo nav-link"><img src="/images/KILARA.png" alt="logo"></a>
-                    <a href="./index.html" class="smartphone logo nav-link"><img src="/images/KILARA.small.png" alt="logo.small"></a>
+                    <a href="./index.html" class="normal logo nav-link"><img src="images/KILARA.png" alt="logo"></a>
+                    <a href="./index.html" class="smartphone logo nav-link"><img src="images/KILARA.small.png" alt="logo.small"></a>
                     <div class="icons">
-                        <a href="tel:012 345 6789" class="phone"><img src="/images/phone.png" alt="phone"></a>
+                        <a href="tel:012 345 6789" class="phone"><img src="images/phone.png" alt="phone"></a>
                         <a href="tel:012 345 6789" class="normal number">012 345 6789</a>
-                        <a href="#" id="open-cart" class="normal cart"><img src="/images/cart.png" alt="cart"></a>
+                        <a href="#" id="open-cart" class="normal cart"><img src="images/cart.png" alt="cart"></a>
                             <div id="cart-container" class="cart-container">
                                 <div class="cart-content" id="cart-content">
-                                    <a href="#" id="close-cart" class="closebtn"><img src="/images/close-btn.png" alt="close"></a>
+                                    <a href="#" id="close-cart" class="closebtn"><img src="images/close-btn.png" alt="close"></a>
                                     <h3>Мій кошик</h3>
                                     <div class="export"></div>
                                     <a href="./order.html" class="order nav-link">Оформити замовлення</a>
                                 </div>
                             </div>
-                        <a href="#" id="open-cart-sp" class="smartphone cart"><img src="/images/cart.small.png" alt="cart.small"></a>
+                        <a href="#" id="open-cart-sp" class="smartphone cart"><img src="images/cart.small.png" alt="cart.small"></a>
                             <div id="cart-container-sp" class="cart-container-sp">
                                 <div class="cart-content-sp">
-                                    <a href="#" id="close-cart-sp" class="closebtn-sp"><img src="/images/close-btn.png" alt="close"></a>
+                                    <a href="#" id="close-cart-sp" class="closebtn-sp"><img src="images/close-btn.png" alt="close"></a>
                                     <h4>Мій кошик</h4>
                                     <div class="export"></div>
                                     <a href="./order.html" class="order-sp nav-link">Оформити замовлення</a>
                                 </div>
                             </div>
-                        <a href="#" id="open-user" class="normal user"><img src="/images/user.png" alt="user"></a>
+                        <a href="#" id="open-user" class="normal user"><img src="images/user.png" alt="user"></a>
                             <div id="user-container" class="user-container">
                                 <div class="user-content">
                                     <h3>Авторизація</h3>
@@ -164,11 +164,11 @@
                                     <a href="#" class="go">Увійти</a>
                                 </div>
                             </div>
-                        <a href="#" class="smartphone user" id="open-user-sp"><img src="/images/user.small.png" alt="user.small"></a>
+                        <a href="#" class="smartphone user" id="open-user-sp"><img src="images/user.small.png" alt="user.small"></a>
                             <div id="user-container-sp" class="user-container-sp">
                                 <div class="user-content-sp">
                                     <div class="user-upper">
-                                        <a href="#" id="close-user-sp" class="closebtn-sp"><img src="/images/close-btn.png" alt="close"></a>
+                                        <a href="#" id="close-user-sp" class="closebtn-sp"><img src="images/close-btn.png" alt="close"></a>
                                         <h4>Авторизація</h4>
                                     </div>
                                     <div class="user-login">
@@ -182,14 +182,14 @@
                                     
                                 </div>
                             </div>
-                        <a href="#" class="normal likes"><img src="/images/likes.png" alt="likes"></a>
-                        <a href="#" class="smartphone likes"><img src="/images/likes.small.png" alt="likes.small"></a>
+                        <a href="#" class="normal likes"><img src="images/likes.png" alt="likes"></a>
+                        <a href="#" class="smartphone likes"><img src="images/likes.small.png" alt="likes.small"></a>
                     </div>
                 </div>
             </div>
             <nav class="menu">
                     <ul class="ul_menu">
-                        <li class="ct"><a href="#">Жінкам <img src="/images/Arrow 1.png" alt="arrow" class="arrow"></a>
+                        <li class="ct"><a href="#">Жінкам <img src="images/Arrow 1.png" alt="arrow" class="arrow"></a>
                             <div class="submenu container">
                                     <ul>
                                         <li class="first"><a href="#">Одяг</a></li>
@@ -214,7 +214,7 @@
                                     </ul>
                             </div>
                         </li>
-                        <li class="ct"><a href="#">Чоловікам <img src="/images/Arrow 1.png" alt="arrow" class="arrow"></a>
+                        <li class="ct"><a href="#">Чоловікам <img src="images/Arrow 1.png" alt="arrow" class="arrow"></a>
                             <div class="submenu container">
                                     <ul>
                                         <li class="first"><a href="#">Одяг</a></li>
@@ -238,7 +238,7 @@
                                     </ul>
                             </div>
                         </li>
-                        <li class="ct"><a href="#">Дітям <img src="/images/Arrow 1.png" alt="arrow" class="arrow"></a>
+                        <li class="ct"><a href="#">Дітям <img src="images/Arrow 1.png" alt="arrow" class="arrow"></a>
                             <div class="submenu container">
                                     <ul>
                                         <li class="first"><a href="#">Одяг</a></li>
@@ -261,7 +261,7 @@
                                     </ul>
                             </div>
                         </li>
-                        <li class="ct"><a href="#">Аксесуари <img src="/images/Arrow 1.png" alt="arrow" class="arrow"></a>
+                        <li class="ct"><a href="#">Аксесуари <img src="images/Arrow 1.png" alt="arrow" class="arrow"></a>
                             <div class="submenu container">
                                     <ul>
                                     <li class="first"><a href="#">Сумки</a></li>
@@ -310,9 +310,9 @@
                         </ul>
                         <ul>
                             <li class="first">Соцмережі</li>
-                            <li class="sociable"><a href="#"><img src="/images/insta.png" alt=""></a>
-                                <a href="#"><img src="/images/tele.png" alt=""></a>
-                                <a href="#"><img src="/images/tik.png" alt=""></a></li>
+                            <li class="sociable"><a href="#"><img src="images/insta.png" alt=""></a>
+                                <a href="#"><img src="images/tele.png" alt=""></a>
+                                <a href="#"><img src="images/tik.png" alt=""></a></li>
                         </ul>
                         <ul>
                             <li class="first">Адреса</li>
@@ -351,8 +351,8 @@
         <div class="container">
             <div class="contacts_ct">
                 <div class="block image">
-                    <a class="normal nav-link" href="./index.html"><img src="/images/KILARA.png" alt="logo"></a>
-                    <a class="smartphone nav-link" href="./index.html"><img src="/images/KILARA.small.png" alt="logo-small"></a>
+                    <a class="normal nav-link" href="./index.html"><img src="images/KILARA.png" alt="logo"></a>
+                    <a class="smartphone nav-link" href="./index.html"><img src="images/KILARA.small.png" alt="logo-small"></a>
                 </div>
                 <div class="block">
                     <ul>
@@ -392,17 +392,17 @@
                 <div class="block">
                     <span>Слідкуй за нами:</span>
                     <div class="links">
-                        <a href="#"><img src="/images/insta.png" alt="instagram"></a>
-                        <a href="#"><img src="/images/tele.png" alt="telegram"></a>
-                        <a href="#"><img src="/images/tik.png" alt="tik-tok"></a>
+                        <a href="#"><img src="images/insta.png" alt="instagram"></a>
+                        <a href="#"><img src="images/tele.png" alt="telegram"></a>
+                        <a href="#"><img src="images/tik.png" alt="tik-tok"></a>
                     </div>
                 </div>
                 <div class="block">
                     <span>Ми приймаємо:</span>
                     <div class="pay">
-                        <a href="#"><img src="/images/visa.png" alt="VISA"></a>
-                        <a href="#"><img src="/images/g-pay.png" alt="Google-Pay"></a>
-                        <a href="#"><img src="/images/a-pay.png" alt="Apple-Pay"></a>
+                        <a href="#"><img src="images/visa.png" alt="VISA"></a>
+                        <a href="#"><img src="images/g-pay.png" alt="Google-Pay"></a>
+                        <a href="#"><img src="images/a-pay.png" alt="Apple-Pay"></a>
                     </div>
                 </div>
             </div>
