додав посилання на item

--- a/index_2.html
+++ b/index_2.html
@@ -415,7 +415,7 @@
             </div>
             <div class="catalogue2_ct">
                 <div class="block">
-                    <div class="img"><a href="#"><img src="images/example-1.png" alt=""></a></div>
+                    <div class="img"><a href="./item_page.html"><img src="images/example-1.png" alt=""></a></div>
                     <button class="like-this" type="button"><div class="likeThis"><img src="images/likes.png" class="like-icon" alt=""></div></button>
                     <button class="like-this-sp" type="button"><div class="likeThis"><img src="images/likes.small.png" class="like-icon-sp" alt=""></div></button>
                     <div class="text"><p>Коротка сукня з принтом троянд білого кольору</p></div>
@@ -462,7 +462,7 @@
                     <button class="btn-buy-sp" type="button"><div class="buyBtn"><img src="images/cart.small.png" class="cart-icon-sp" alt=""></div></button>
                 </div>
                 <div class="block">
-                    <div class="img"><a href="#"><img src="images/example-2.png" alt=""></a></div>
+                    <div class="img"><a href="./item_page.html"><img src="images/example-2.png" alt=""></a></div>
                     <button class="like-this" type="button"><div class="likeThis"><img src="images/likes.png" class="like-icon" alt=""></div></button>
                     <button class="like-this-sp" type="button"><div class="likeThis"><img src="images/likes.small.png" class="like-icon-sp" alt=""></div></button>
                     <div class="text"><p>Комплект светр та сукня молочного кольору</p></div>
@@ -509,7 +509,7 @@
                     <button class="btn-buy-sp" type="button"><div class="buyBtn"><img src="images/cart.small.png" class="cart-icon-sp" alt=""></div></button>
                 </div>
                 <div class="block">
-                    <div class="img"><a href="#"><img src="images/example-3.png" alt=""></a></div>
+                    <div class="img"><a href="./item_page.html"><img src="images/example-3.png" alt=""></a></div>
                     <button class="like-this" type="button"><div class="likeThis"><img src="images/likes.png" class="like-icon" alt=""></div></button>
                     <button class="like-this-sp" type="button"><div class="likeThis"><img src="images/likes.small.png" class="like-icon-sp" alt=""></div></button>
                     <div class="text"><p>Коротка сукня бежевого кольру з зав’язками</p></div>
@@ -556,7 +556,7 @@
                     <button class="btn-buy-sp" type="button"><div class="buyBtn"><img src="images/cart.small.png" class="cart-icon-sp" alt=""></div></button>
                 </div>
                 <div class="block">
-                    <div class="img"><a href="#"><img src="images/example-4.png" alt=""></a></div>
+                    <div class="img"><a href="./item_page.html"><img src="images/example-4.png" alt=""></a></div>
                     <button class="like-this" type="button"><div class="likeThis"><img src="images/likes.png" class="like-icon" alt=""></div></button>
                     <button class="like-this-sp" type="button"><div class="likeThis"><img src="images/likes.small.png" class="like-icon-sp" alt=""></div></button>
                     <div class="text"><p>Довга сукня з чорним верхом та напівпрозорим низом</p></div>
