--- a/dityam_comlects.html
+++ b/dityam_comlects.html
@@ -36,6 +36,7 @@
                                                                     <li class="menu-block"><a href="#">Топи</a></li>
                                                                     <li class="menu-block"><a href="#">Худі та світшоти</a></li>
                                                                     <li class="menu-block"><a href="#">Спідниці та шорти</a></li>
+                                                                    <li class="menu-block"><a href="./index_2.html">Сукні</a></li>
                                                                     <li class="menu-block"><a href="#">Джинси та брюки</a></li>
                                                                     <li class="menu-block"><a href="#">Верхній одяг</a></li>
                                                                     <li class="menu-block"><a href="#">Пляжний одяг</a></li>
@@ -198,7 +199,7 @@
                                         <li class="second"><a href="#">Худі та світшоти</a></li>
                                         <li class="second"><a href="#">Спідниці та шорти</a></li>
                                         <li class="second"><a href="#">Комплекти</a></li>
-                                        <li class="second"><a href="./index_2.html" class="nav-link">Сукні та туніки</a></li>
+                                        <li class="second"><a href="./index_2.html" class="nav-link">Сукні</a></li>
                                         <li class="second"><a href="#">Джинси та брюки</a></li>
                                         <li class="second"><a href="#">Верхній одяг</a></li>
                                         <li class="second"><a href="#">Пляжний одяг</a></li>
