--- a/panamki.html
+++ b/panamki.html
@@ -84,8 +84,8 @@
                                                                     <li class="menu-block"><a href="#">Топи</a></li>
                                                                     <li class="menu-block"><a href="#">Худі та світшоти</a></li>
                                                                     <li class="menu-block"><a href="#">Спідниці та шорти</a></li>
-                                                                    <li class="menu-block"><a href="№">Комплекти</a></li>
-                                                                    <li class="menu-block"><a href="№">Спортивний одяг</a></li>
+                                                                    <li class="menu-block"><a href="./dityam_comlects.html">Комплекти</a></li>
+                                                                    <li class="menu-block"><a href="#">Спортивний одяг</a></li>
                                                                     <li class="menu-block"><a href="#">Джинси та брюки</a></li>
                                                                     <li class="menu-block"><a href="#">Верхній одяг</a></li>
                                                                     <li class="menu-block"><a href="#">Пляжний одяг</a></li>
@@ -111,7 +111,7 @@
                                                                     <li class="menu-block"><a href="№">Рюкзаки</a></li>
                                                                     <li class="menu-block-main"><a href="#">Головні убори</a></li>
                                                                     <li class="menu-block"><a href="#">Кепки</a></li>
-                                                                    <li class="menu-block"><a href="#">Панамки</a></li>
+                                                                    <li class="menu-block"><a href="./panamki.html">Панамки</a></li>
                                                                     <li class="menu-block"><a href="#">Берети</a></li>
                                                                     <li class="menu-block"><a href="#">Капелюхи</a></li>
                                                                     <li class="menu-block"><a href="#">Шапки</a></li>
@@ -247,8 +247,8 @@
                                         <li class="second"><a href="#">Майки</a></li>
                                         <li class="second"><a href="#">Худі та світшоти</a></li>
                                         <li class="second"><a href="#">Шорти</a></li>
-                                        <li class="second"><a href="#">Комплекти</a></li>
-                                        <li class="second"><a href="№">Спортивний одяг</a></li>
+                                        <li class="second"><a href="./dityam_comlects.html">Комплекти</a></li>
+                                        <li class="second"><a href="#">Спортивний одяг</a></li>
                                         <li class="second"><a href="#">Джинси та брюки</a></li>
                                         <li class="second"><a href="#">Верхній одяг</a></li>
                                         <li class="second"><a href="#">Пляжний одяг</a></li>
@@ -275,7 +275,7 @@
                                     <ul>
                                     <li class="first"><a href="#">Головні убори</a></li>
                                     <li class="second"><a href="#">Кепки</a></li>
-                                    <li class="second"><a href="#">Панамки</a></li>
+                                    <li class="second"><a href="./panamki.html">Панамки</a></li>
                                     <li class="second"><a href="#">Берети</a></li>
                                     <li class="second"><a href="#">Капелюхи</a></li>
                                     <li class="second"><a href="#">Шапки</a></li>
@@ -301,9 +301,9 @@
                 <div class="page-head">
                     <nav class="breadcrumbs" aria-label="Хлібні крихти">
                         <ul>
-                            <li><a href="/kids">Дітям/</a></li>
-                            <li><a href="/kids/clothes">Одяг/</a></li>
-                            <li aria-current="page">Комплекти</li>
+                            <li><a href="/acs">Аксесуари/</a></li>
+                            <li><a href="/acs/uper">Головні убори/</a></li>
+                            <li aria-current="page">Панамки</li>
                         </ul>
                     </nav>
                     <h4 class="page-title" id="page-title"></h4>
