--- a/login.html
+++ b/login.html
@@ -283,6 +283,7 @@
                     </form>
                     <div class="forgot-pass-overlay">
                         <div class="forgot-pass-content">
+                            <button type="button" id="close-forgot" class="close-forgot-btn"><img src="images/close-btn.png" alt="close"></button>
                             <form class="approve-acc">
                                 <p id="top-text">Перевірте свою електрону пошту та впишіть правильний код для зміни пароля</p>
                                 <div class="form-flex">
