--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             <div class="menu-content">
                                 <div class="menu-top">
                                     <div class="upper-menu">
-                                        <button type="button" id="close-menu" class="close-menu-btn"><img src="images/close-btn.png" alt="close"></button>
+                                        <button type="button" id="close-menu" class="close-menu-btn"><img src="images/close-btn.png" width="20px" alt="close"></button>
                                     </div>
 
                                     <div class="search-small-div"><input type="text" class="search-small"></div>
@@ -421,7 +421,6 @@
                     <button id="prevBtn" class="nav-btn" aria-label="попередні"><div class="arrow-back"></div></button>
                     <button id="nextBtn" class="nav-btn" aria-label="наступні"><div class="arrow-next"></div></button>
                 </nav>
- 
                 <div class="nazva">
                     <a href="#"><h2>Топ продажів</h2></a>
                     <a href="#" class="btn more">Більше</a>
