--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
                             <div class="menu-content">
                                 <div class="menu-top">
                                     <div class="upper-menu">
-                                        <button type="button" id="close-menu" class="close-menu-btn"><img src="images/close-btn.png" alt="close"></button>
+                                        <button type="button" id="close-menu" class="close-menu-btn"><img src="images/close-btn.png" width="20px" alt="close"></button>
                                     </div>
 
                                     <div class="search-small-div"><input type="text" class="search-small"></div>
