--- a/index_contacts.html
+++ b/index_contacts.html
@@ -143,7 +143,7 @@
                         <button type="button" id="open-cart" class="cart"><img src="images/cart.png" width="25px" height="25px" alt="cart"></button>
                             <div id="cart-container" class="cart-container">
                                 <div class="cart-content" id="cart-content">
-                                    <button id="close-cart" class="closebtn"><img src="images/close-btn.png" alt="close"></button>
+                                    <button id="close-cart" class="closebtn"><img src="images/close-btn.png" width="20px" alt="close"></button>
                                     <h3>Мій кошик</h3>
                                     <div class="export"></div>
                                     <a href="./order.html" class="order nav-link">Оформити замовлення</a>
