--- a/item_2.html
+++ b/item_2.html
@@ -143,7 +143,7 @@
                         <button type="button" id="open-cart" class="cart"><img src="images/cart.png" width="25px" height="25px" alt="cart"></button>
                             <div id="cart-container" class="cart-container">
                                 <div class="cart-content" id="cart-content">
-                                    <button id="close-cart" class="closebtn"><img src="images/close-btn.png" alt="close"></button>
+                                    <button id="close-cart" class="closebtn"><img src="images/close-btn.png" width="20px" alt="close"></button>
                                     <h3>Мій кошик</h3>
                                     <div class="export"></div>
                                     <a href="./order.html" class="order nav-link">Оформити замовлення</a>
@@ -338,7 +338,7 @@
                             <button class="size-btn" id="open-size" type="button">Таблиця розмірів</button>
                                     <div class="size-container" id="size-container">
                                         <div class="size-content" id="size-content">
-                                            <img src="images/close-btn.png" class="close-size" id="close-size" alt="">
+                                            <img src="images/close-btn.png" width="20px" class="close-size" id="close-size" alt="">
                                             <div class="size-grid">
                                                 <p>Вік</p>
                                                 <p>Зріст, см</p>
@@ -421,7 +421,7 @@
                                 <li><div class="item-block" id="open-chr">Характеристики<div class="item-arrow"></div></div></li>
                                     <div class="chr-container" id="chr-container">
                                         <div class="chr" id="chr">
-                                            <img src="images/close-btn.png" alt="" class="close-chr" id="close-chr">
+                                            <img src="images/close-btn.png" width="20px" alt="" class="close-chr" id="close-chr">
                                             <h5>Характеристики</h5>
                                             <p>Стать: хлопчикам<br>Матеріал: поліестер<br>Сезон: весна-осінь<br>Склад: 95% поліестер, 5% еластан<br>Стиль: повсякденний</p>
                                         </div>
@@ -429,7 +429,7 @@
                                 <li><div class="item-block" id="open-del">Доставка<div class="item-arrow"></div></div></li>
                                     <div class="del-container" id="del-container">
                                         <div class="del-content" id="del-content">
-                                            <img src="images/close-btn.png" class="close-del" id="close-del" alt="">
+                                            <img src="images/close-btn.png" width="20px" class="close-del" id="close-del" alt="">
                                             <div class="del-info">
                                                 <div class="del-info-upper">
                                                     <img src="images/delivery-box.png" alt="">
@@ -449,7 +449,7 @@
                                 <li><div class="item-block" id="open-pay">Оплата<div class="item-arrow"></div></div></li>
                                     <div class="pay-container" id="pay-container">
                                         <div class="pay-content" id="pay-content">
-                                            <img src="images/close-btn.png" id="close-pay" class="close-pay" alt="">
+                                            <img src="images/close-btn.png" width="20px" id="close-pay" class="close-pay" alt="">
                                             <div class="pay-info">
                                                 <div class="pay-info-upper">
                                                     <img src="images/payment-card.png" alt="">
@@ -492,7 +492,7 @@
                 <button type="button" class="reviewBtn" id="open-rev">Написати відгук</button>
                     <div class="revForm-container" id="rev-container">
                         <form id="reviewForm" class="review-form" aria-label="Форма додавання відгуку">
-                            <img src="images/close-btn.png" class="close-rev" id="close-rev" alt="">
+                            <img src="images/close-btn.png" width="20px" class="close-rev" id="close-rev" alt="">
                             <div class="col">
                                 <h5>Написати відгук</h5>
                                 <div class="stars-input" role="radiogroup" aria-label="Рейтинг">
