--- a/item_3.html
+++ b/item_3.html
@@ -142,7 +142,7 @@
                         <button type="button" id="open-cart" class="cart"><img src="images/cart.png" width="25px" height="25px" alt="cart"></button>
                             <div id="cart-container" class="cart-container">
                                 <div class="cart-content" id="cart-content">
-                                    <button id="close-cart" class="closebtn"><img src="images/close-btn.png" alt="close"></button>
+                                    <button id="close-cart" class="closebtn"><img src="images/close-btn.png" width="20px" alt="close"></button>
                                     <h3>Мій кошик</h3>
                                     <div class="export"></div>
                                     <a href="./order.html" class="order nav-link">Оформити замовлення</a>
@@ -348,7 +348,7 @@
                                 <li><div class="item-block" id="open-chr">Характеристики<div class="item-arrow"></div></div></li>
                                     <div class="chr-container" id="chr-container">
                                         <div class="chr" id="chr">
-                                            <img src="images/close-btn.png" alt="" class="close-chr" id="close-chr">
+                                            <img src="images/close-btn.png" width="20px" alt="" class="close-chr" id="close-chr">
                                             <h5>Характеристики</h5>
                                             <p>Стать: жінкам<br>Матеріал: бавовна<br>Сезон: весна-літо<br>Склад: 100% бавовна<br>Стиль: повсякденний<br>Обхват голови: 58 см</p>
                                         </div>
@@ -356,7 +356,7 @@
                                 <li><div class="item-block" id="open-del">Доставка<div class="item-arrow"></div></div></li>
                                     <div class="del-container" id="del-container">
                                         <div class="del-content" id="del-content">
-                                            <img src="images/close-btn.png" class="close-del" id="close-del" alt="">
+                                            <img src="images/close-btn.png" width="20px" class="close-del" id="close-del" alt="">
                                             <div class="del-info">
                                                 <div class="del-info-upper">
                                                     <img src="images/delivery-box.png" width="33px" alt="">
@@ -376,7 +376,7 @@
                                 <li><div class="item-block" id="open-pay">Оплата<div class="item-arrow"></div></div></li>
                                     <div class="pay-container" id="pay-container">
                                         <div class="pay-content" id="pay-content">
-                                            <img src="images/close-btn.png" id="close-pay" class="close-pay" alt="">
+                                            <img src="images/close-btn.png" width="20px" id="close-pay" class="close-pay" alt="">
                                             <div class="pay-info">
                                                 <div class="pay-info-upper">
                                                     <img src="images/payment-card.png" width="33px" alt="">
@@ -419,7 +419,7 @@
                 <button type="button" class="reviewBtn" id="open-rev">Написати відгук</button>
                     <div class="revForm-container" id="rev-container">
                         <form id="reviewForm" class="review-form" aria-label="Форма додавання відгуку">
-                            <img src="images/close-btn.png" class="close-rev" id="close-rev" alt="">
+                            <img src="images/close-btn.png" width="20px" class="close-rev" id="close-rev" alt="">
                             <div class="col">
                                 <h5>Написати відгук</h5>
                                 <div class="stars-input" role="radiogroup" aria-label="Рейтинг">
