--- a/login.html
+++ b/login.html
@@ -142,7 +142,7 @@
                         <button type="button" id="open-cart" class="cart"><img src="images/cart.png" width="25px" height="25px" alt="cart"></button>
                             <div id="cart-container" class="cart-container">
                                 <div class="cart-content" id="cart-content">
-                                    <button id="close-cart" class="closebtn"><img src="images/close-btn.png" alt="close"></button>
+                                    <button id="close-cart" class="closebtn"><img src="images/close-btn.png" width="20px" alt="close"></button>
                                     <h3>Мій кошик</h3>
                                     <div class="export"></div>
                                     <a href="./order.html" class="order nav-link">Оформити замовлення</a>
@@ -283,7 +283,7 @@
                     </form>
                     <div class="forgot-pass-overlay">
                         <div class="forgot-pass-content">
-                            <button type="button" id="close-forgot" class="close-forgot-btn"><img src="images/close-btn.png" alt="close"></button>
+                            <button type="button" id="close-forgot" class="close-forgot-btn"><img src="images/close-btn.png" width="20px" alt="close"></button>
                             <form class="approve-acc">
                                 <p id="top-text">Перевірте свою електрону пошту та впишіть правильний код для зміни пароля</p>
                                 <div class="form-flex">
