--- a/order.html
+++ b/order.html
@@ -326,71 +326,84 @@
                     </ul>
                 </div>
             </div>
-            <form class="order-info">
-                <article class="cont-info grid-2cols">
-                    <span class="info-h ">Контактні дані</span>
-                    <input type="text" name="name" placeholder="Ім'я">
-                    <input type="text" name="surname" placeholder="Прізвище">
-                    <input type="tel" name="number" placeholder="Номер">
-                    <input type="email" name="email" placeholder="E-mail">
-                </article>
-                <div class="delivery-choices grid-2cols">
-                    <span class="info-h">Спосіб доставки</span>
-                    <a href="#" class="choice-btn option-delivery" data-mode="branch" aria-pressed="false">
-                        Доставка у відділення нової пошти</a>
-                    <a href="#" class="choice-btn option-delivery" data-mode="courier" aria-pressed="false">
-                        Доставку кур'єром нової пошти</a>
-                </div>
-                <div id="address-section" class="address-section hidden grid-2cols">
-                        <span class="info-h">Адреса доставки</span>
-
+            <form class="order-info" id="order-form" novalidate>
+                <fieldset class="cont-info grid-2cols">
+                    <legend class="info-h">Контактні дані</legend>
+                    <label><input type="text" name="name" id="name" autocomplete="given-name" placeholder="Ім'я" required></label>
+                    <label><input type="text" name="surname" id="surname" autocomplete="family-name" placeholder="Прізвище" required></label>
+                    <label><input type="tel" name="phone" id="phone" placeholder="Номер телефону" inputmode="tel" autocomplete="tel" pattern="^\+?380\d{9}$" required></label>
+                    <label><input type="email" name="email" id="email" placeholder="E-mail" autocomplete="email" required></label>
+                </fieldset>
+                <fieldset class="delivery-choices">
+                    <legend class="info-h">Спосіб доставки</legend>
+                    <div role="radiogroup" aria-label="Спосіб доставки" class="grid-2cols">
+                        <button type="button" class="choice-btn option-delivery" data-mode="branch" aria-pressed="false">
+                            Доставка у відділення нової пошти
+                        </button>
+                        <button type="button" class="choice-btn option-delivery" data-mode="courier" aria-pressed="false">
+                            Доставку кур'єром нової пошти
+                        </button>
+                    </div>
+                </fieldset>
+                <section id="address-section" class="address-section hidden">
+                    <fieldset class="grid-2cols">
+                        <legend class="info-h">Адреса доставки</legend>
                         <label class="select-wrap">
-                            <select id="region" required disabled>
-                            <option value="" selected disabled>Область</option>
+                            <select id="region" name="region" required disabled>
+                                <option value="" selected disabled>Область</option>
                             </select>
                         </label>
                         <label class="select-wrap">
-                            <select id="city" required disabled>
-                            <option value="" selected disabled>Місто</option>
+                            <select id="city" name="city" required disabled>
+                                <option value="" selected disabled>Місто</option>
                             </select>
                         </label>
-                        <label id="branch-wrap" class="select-wrap hidden">
+                        <label id="branch-wrap" name="branch" class="select-wrap hidden">
                             <select id="branch" required disabled>
-                            <option value="" selected disabled>Відділення Нової Пошти</option>
+                                <option value="" selected disabled>Відділення Нової Пошти</option>
                             </select>
                         </label>
                         <label id="fulladdr-wrap" class="hidden">
-                            <input id="full-address" class="full-address" type="text" placeholder="вул. Прикладна, 10, кв. 25" required disabled>
+                            <input id="full-address" name="full-address" class="full-address" type="text" autocomplete="street-address" placeholder="вул. Прикладна, 10, кв. 25" required disabled>
                         </label>
-                </div>
-                <div class="payment-choices grid-2cols">
-                        <span class="info-h">Спосіб оплати</span>
-                        <a href="#" class="choice-btn option-payment" data-pay="cod">При отриманні (по тарифам перевізника)</a>
-                        <a href="#" class="choice-btn option-payment" data-pay="card">Картою Visa/Mastercard (без комісії)</a>
-                </div>
-                <div id="card-form" class="hidden" aria-hidden="true">
-                        <div class="payment-details grid-2cols">
-                            <span class="info-h">Дані картки</span>
-                            <label class="field">
-                                <span class="field-h">Номер картки</span>
-                                <input id="cc-number" name="cc_number" type="text" inputmode="numeric" placeholder="0000 0000 0000 0000" maxlength="19" pattern="[0-9]{16,19}">
-                            </label>
-                            <label class="field">
-                                <span class="field-h">Строк дії(MM/YY)</span>
-                                <input id="cc-exp" name="cc_exp" type="text" inputmode="numeric" placeholder="MM/YY" maxlenght="5" pattern="(0[1-9]|1[0-2])\/[0-9]{2}">
-                            </label>
-                            <label class="field">
-                                <span class="field-h">CVV</span>
-                                <input id="cc-cvv" name="cc_cvv" type="password" inputmode="numeric" placeholder="* * *" maxlenght="4" pattern="[0-9]{3,4}">
-                            </label>
-                            <label class="field">
-                                <span class="field-h">Ім'я та Прізвище на картці</span>
-                                <input id="cc-name" name="cc_name" type="text">
-                            </label>
-                        </div>
-                </div>
+                    </fieldset>
+                </section>
+                <fieldset class="payment-choices">
+                    <legend class="info-h">Спосіб оплати</legend>
+                    <div role="radiogroup" aria-label="Спосід оплати" class="grid-2cols">
+                        <button type="button" class="choice-btn option-payment" data-pay="cod">
+                            При отриманні (по тарифам перевізника)
+                        </button>
+                        <button type="button" class="choice-btn option-payment" data-pay="card">
+                            Картою Visa/Mastercard (без комісії)
+                        </button>
+                    </div>
+                </fieldset>
+                <section id="card-form" class="hidden" aria-hidden="true">
+                    <fieldset class="payment-details grid-2cols">
+                        <legend class="info-h">Дані картки</legend>
+                        <label class="field">
+                            <span class="field-h">Номер картки</span>
+                            <input id="cc-number" name="cc_number" type="text" inputmode="numeric" placeholder="0000 0000 0000 0000" maxlength="19" pattern="[0-9]{16,19}">
+                        </label>
+                        <label class="field">
+                            <span class="field-h">Строк дії(MM/YY)</span>
+                            <input id="cc-exp" name="cc_exp" type="text" inputmode="numeric" placeholder="MM/YY" maxlenght="5" pattern="(0[1-9]|1[0-2])\/[0-9]{2}">
+                        </label>
+                        <label class="field">
+                            <span class="field-h">CVV</span>
+                            <input id="cc-cvv" name="cc_cvv" type="password" inputmode="numeric" placeholder="* * *" maxlenght="4" pattern="[0-9]{3,4}">
+                        </label>
+                        <label class="field">
+                            <span class="field-h">Ім'я та Прізвище на картці</span>
+                            <input id="cc-name" name="cc_name" type="text" automplete="cc-name">
+                        </label>
+                    </fieldset>
+                </section>
+                <label class="full-width">
                     <span class="info-h">Ваш коментар</span>
-                <textarea name="" id="" placeholder="Коментар"></textarea>
+                    <textarea name="comment" id="comment" placeholder="Коментар" rows="4"></textarea>
+                </label>
                 <button type="submit" class="ordering-btn">Оформити замовлення</button>
             </form>
         </div>
